Grosse maj img designers / admin users/ confirm mail ..

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -79,6 +79,11 @@
   width: fit-content;
 }
 
+.flex-info-card.ads {
+  align-items: end;
+  height: 89%;
+}
+
 .domaine-flex-card {
   display: flex;
   flex-direction: column;
