--- a/app/views/oeuvres/_form.html.erb
+++ b/app/views/oeuvres/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
   <!-- Étape 1 : Règlement -->
   <div class="form-step" data-step="1">
-    <h3>Critères d’acceptation des œuvres et designers</h3>
+    <h3>Critères d’acceptation des références et designers</h3>
     <p>
       Afin de garantir la qualité, la cohérence et le respect du travail de chacun, toute soumission sur omniscientdesign.fr doit respecter les critères suivants.
       <br>
