--- a/app/views/admin/dashboard/suivi_lists.html.erb
+++ b/app/views/admin/dashboard/suivi_lists.html.erb
@@ -24,12 +24,36 @@
 </section>
 <section class="grid-1">
   <h2>Statistiques globales</h2>
-  <ul>
-    <li><strong>Total des listes créées :</strong> <%= @total_lists %></li>
-    <li><strong>Utilisateurs ayant créé une liste :</strong> <%= @users_with_lists %></li>
-    <li><strong>Total des visiteurs invités :</strong> <%= @total_visitors %></li>
-    <li><strong>Total des éditeurs invités :</strong> <%= @total_editors %></li>
-  </ul>
+  <div class="stats-grid">
+    <div class="stat-card">
+      <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#202020" viewBox="0 0 24 24" stroke="none">
+        <path d="M16 11c1.66 0 3-1.34 3-3S17.66 5 16 5s-3 1.34-3 3 1.34 3 3 3zm-8 0c1.66 0 3-1.34 3-3S9.66 5 8 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.67 0-8 1.34-8 4v3h18v-3c0-2.66-5.33-4-8-4zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45v3h5v-3c0-2.66-5.33-4-6-4z"/>
+      </svg>
+      <h2><%= @total_lists %></h2>
+      <p>Total des listes créées</p>
+    </div>
+    <div class="stat-card">
+      <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#202020" viewBox="0 0 24 24" stroke="none">
+        <path d="M16 11c1.66 0 3-1.34 3-3S17.66 5 16 5s-3 1.34-3 3 1.34 3 3 3zm-8 0c1.66 0 3-1.34 3-3S9.66 5 8 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.67 0-8 1.34-8 4v3h18v-3c0-2.66-5.33-4-8-4zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45v3h5v-3c0-2.66-5.33-4-6-4z"/>
+      </svg>
+      <h2><%= @users_with_lists %></h2>
+      <p>Utilisateurs ayant créé une liste</p>
+    </div>
+    <div class="stat-card">
+      <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#202020" viewBox="0 0 24 24" stroke="none">
+        <path d="M16 11c1.66 0 3-1.34 3-3S17.66 5 16 5s-3 1.34-3 3 1.34 3 3 3zm-8 0c1.66 0 3-1.34 3-3S9.66 5 8 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.67 0-8 1.34-8 4v3h18v-3c0-2.66-5.33-4-8-4zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45v3h5v-3c0-2.66-5.33-4-6-4z"/>
+      </svg>
+      <h2><%= @total_visitors %></h2>
+      <p>Total des visiteurs invités</p>
+    </div>
+    <div class="stat-card">
+      <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#202020" viewBox="0 0 24 24" stroke="none">
+        <path d="M16 11c1.66 0 3-1.34 3-3S17.66 5 16 5s-3 1.34-3 3 1.34 3 3 3zm-8 0c1.66 0 3-1.34 3-3S9.66 5 8 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.67 0-8 1.34-8 4v3h18v-3c0-2.66-5.33-4-8-4zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45v3h5v-3c0-2.66-5.33-4-6-4z"/>
+      </svg>
+      <h2><%= @total_editors %></h2>
+      <p>Total des éditeurs invités</p>
+    </div>
+  </div>
   <hr>
   <h2>Classement des créateurs de listes</h2>
   <table>
