--- a/app/views/designers/_card.html.erb
+++ b/app/views/designers/_card.html.erb
@@ -1,10 +1,6 @@
-<%
-  # Détermination de l'image
-  raw_path = "designers/desktop/#{remove_accents_and_special_chars(card.nom_designer)}.webp"
-  image_path = asset_exists?(raw_path) ? asset_path(raw_path) : card.image
-%>
+<% images = card.designer_images.select { |img| img.file.attached? }.map(&:file) %>
 <%= link_to designer_path(card.slug) do %>
-  <div class="card" data-id="<%= card.id %>">
+  <div class="card" data-id="<%= card.id %>" data-controller="slider" data-slider-update-background-value="true">
     <%# --------- Couleur de fond --------- %>
     <% if card.domaines.any? %>
       <% if card.domaines.size == 1 %>
@@ -20,57 +16,77 @@
           <div class="bg-card" style="background-color: #ccc;">
           <% end %>
           <%# --------- Image de fond --------- %>
-          <% if image_path.present? %>
-            <div class="bg-img-card"
-             style="background-image: url('<%= image_path %>');
-                    background-repeat: no-repeat;
-                    background-position: center center;
-                    background-size: cover;">
-              <%# --------- Infos du designer --------- %>
-              <div class="flex-info-card">
-                <div>
-                  <div class="info-card-dark">
-                    <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <g clip-path="url(#clip0_3261_191)">
-                        <path d="M20.3477 20.6523H16.3477V16.6523H20.3477V20.6523ZM14.3477 10.6523H10.3477V14.6523H14.3477V10.6523ZM20.3477 10.6523H16.3477V14.6523H20.3477V10.6523ZM8.34766 16.6523H4.34766V20.6523H8.34766V16.6523ZM14.3477 16.6523H10.3477V20.6523H14.3477V16.6523ZM8.34766 10.6523H4.34766V14.6523H8.34766V10.6523ZM24.3477 2.65234V24.6523H0.347656V2.65234H3.34766V3.65234C3.34766 4.75534 4.24466 5.65234 5.34766 5.65234C6.45066 5.65234 7.34766 4.75534 7.34766 3.65234V2.65234H17.3477V3.65234C17.3477 4.75534 18.2447 5.65234 19.3477 5.65234C20.4507 5.65234 21.3477 4.75534 21.3477 3.65234V2.65234H24.3477ZM22.3477 8.65234H2.34766V22.6523H22.3477V8.65234ZM20.3477 1.65234C20.3477 1.10034 19.9007 0.652344 19.3477 0.652344C18.7947 0.652344 18.3477 1.10034 18.3477 1.65234V3.65234C18.3477 4.20434 18.7947 4.65234 19.3477 4.65234C19.9007 4.65234 20.3477 4.20434 20.3477 3.65234V1.65234ZM6.34766 3.65234C6.34766 4.20434 5.90066 4.65234 5.34766 4.65234C4.79466 4.65234 4.34766 4.20434 4.34766 3.65234V1.65234C4.34766 1.10034 4.79466 0.652344 5.34766 0.652344C5.90066 0.652344 6.34766 1.10034 6.34766 1.65234V3.65234Z" fill="white"/>
-                      </g>
-                    </svg>
-                    <%= card.date_naissance %>
-                    <% if card.date_deces.present? %>
-                      - <%= card.date_deces %>
-                    <% end %>
-                  </div>
-                  <div class="info-card-dark">
-                    <span class="flag">
-                      <%= card.countries.map { |c| country_flag(c.country_numeric) }.join(' ') %>
-                    </span>
-                  </div>
+          <div class="bg-img-card card-slider-wrapper">
+            <div class="card-slider-blurred-bg" data-slider-target="background"></div>
+            <div class="card-slider-slides">
+              <% if images.any? %>
+                <% images.each_with_index do |image, index| %>
+                  <%= image_tag image, 
+                  alt: card.nom_designer, 
+                  class: "card-slide-image #{'active' if index == 0}", 
+                  data: { slider_target: "slide" } %>
+                <% end %>
+              <% else %>
+                <div class="card-slide-image active" style="background-color: #eee; height: 100%; width: 100%;"></div>
+              <% end %>
+            </div>
+            <div class="flex-info-card">
+              <div>
+                <div class="info-card-dark">
+                  <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_3261_191)">
+                      <path d="M20.3477 20.6523H16.3477V16.6523H20.3477V20.6523ZM14.3477 10.6523H10.3477V14.6523H14.3477V10.6523ZM20.3477 10.6523H16.3477V14.6523H20.3477V10.6523ZM8.34766 16.6523H4.34766V20.6523H8.34766V16.6523ZM14.3477 16.6523H10.3477V20.6523H14.3477V16.6523ZM8.34766 10.6523H4.34766V14.6523H8.34766V10.6523ZM24.3477 2.65234V24.6523H0.347656V2.65234H3.34766V3.65234C3.34766 4.75534 4.24466 5.65234 5.34766 5.65234C6.45066 5.65234 7.34766 4.75534 7.34766 3.65234V2.65234H17.3477V3.65234C17.3477 4.75534 18.2447 5.65234 19.3477 5.65234C20.4507 5.65234 21.3477 4.75534 21.3477 3.65234V2.65234H24.3477ZM22.3477 8.65234H2.34766V22.6523H22.3477V8.65234ZM20.3477 1.65234C20.3477 1.10034 19.9007 0.652344 19.3477 0.652344C18.7947 0.652344 18.3477 1.10034 18.3477 1.65234V3.65234C18.3477 4.20434 18.7947 4.65234 19.3477 4.65234C19.9007 4.65234 20.3477 4.20434 20.3477 3.65234V1.65234ZM6.34766 3.65234C6.34766 4.20434 5.90066 4.65234 5.34766 4.65234C4.79466 4.65234 4.34766 4.20434 4.34766 3.65234V1.65234C4.34766 1.10034 4.79466 0.652344 5.34766 0.652344C5.90066 0.652344 6.34766 1.10034 6.34766 1.65234V3.65234Z" fill="white"/>
+                    </g>
+                  </svg>
+                  <%= card.date_naissance %>
+                  <% if card.date_deces.present? %>
+                    - <%= card.date_deces %>
+                  <% end %>
                 </div>
-                <%# --------- Domaines --------- %>
-                <% if card.domaines.present? %>
-                  <div class="domaine-flex-card">
-                    <% card.domaines.each do |domaine| %>
-                      <div class="info-card-dark">
-                        <div class="small-circle" style="background-color: <%= domaine.couleur %>;"></div>
-                        <%= domaine.domaine %>
-                      </div>
-                    <% end %>
-                  </div>
-                <% else %>
-                  <div class="info-card-dark">
-                    Domaine non spécifié
-                  </div>
+                <div class="info-card-dark">
+                  <span class="flag">
+                    <%= card.countries.map { |c| country_flag(c.country_numeric) }.join(' ') %>
+                  </span>
+                </div>
+              </div>
+              <%# --------- Domaines --------- %>
+              <% if card.domaines.present? %>
+                <div class="domaine-flex-card">
+                  <% card.domaines.each do |domaine| %>
+                    <div class="info-card-dark">
+                      <div class="small-circle" style="background-color: <%= domaine.couleur %>;"></div>
+                      <%= domaine.domaine %>
+                    </div>
+                  <% end %>
+                </div>
+              <% else %>
+                <div class="info-card-dark">
+                  Domaine non spécifié
+                </div>
+              <% end %>
+            </div>
+            <% if images.count > 1 %>
+              <button class="card-slider-nav prev" data-action="click->slider#prev" title="Précédent">
+                <svg width="22" height="41" viewBox="0 0 22 41" fill="none" xmlns="[http://www.w3.org/2000/svg](http://www.w3.org/2000/svg)">
+                  <path d="M18.2568 2.99023L2.83057 20.3942L18.2568 37.7982" stroke="white" stroke-width="4.2362" stroke-linecap="square"/>
+                </svg>
+              </button>
+              <button class="card-slider-nav next" data-action="click->slider#next" title="Suivant">
+                <svg width="22" height="41" viewBox="0 0 22 41" fill="none" xmlns="[http://www.w3.org/2000/svg](http://www.w3.org/2000/svg)">
+                  <path d="M2.99023 2.99023L18.4165 20.3942L2.99023 37.7982" stroke="white" stroke-width="4.2362" stroke-linecap="square"/>
+                </svg>
+              </button>
+              <div class="card-slider-dots">
+                <% images.each_with_index do |image, index| %>
+                  <button class="card-slider-dot <%= 'active' if index == 0 %>" 
+                    data-action="click->slider#switchSlide" 
+                    data-slider-index-value="<%= index %>" 
+                    data-slider-target="dot"></button>
                 <% end %>
               </div>
- <!-- fin flex-info-card -->
-              <img src="<%= image_path %>"
-               alt="<%= card.nom_designer %>"
-               class="img-card">
-            </div>
- <!-- fin bg-img-card -->
-          <% end %>
+            <% end %>
+          </div>
         </div>
- <!-- fin bg-card -->
         <%# --------- Texte en dessous de la carte --------- %>
         <div class="container-text-card">
           <% if card.countries.present? %>
@@ -82,5 +98,5 @@
           <p class="description-card description-card-home"><%= card.presentation_generale %></p>
         </div>
       </div>
- <!-- fin .card -->
+      <!-- fin .card -->
     <% end %>
