--- a/app/views/designers/_designer_card.html.erb
+++ b/app/views/designers/_designer_card.html.erb
@@ -1,10 +1,8 @@
 <%= link_to designer do %>
-  <% image_path = "designers/desktop/#{remove_accents_and_special_chars(designer.nom_designer)}.webp" %>
-  <% if image_path.present? && asset_exists?(image_path) %>
-    <div class="card-designer" style="background: url('<%= asset_path(image_path) %>'); background-size: cover; background-position:center center;">
+  <% if designer.designer_images.first&.file&.attached? %>
+    <div class="card-designer" style="background: url('<%= url_for(designer.designer_images.first.file.variant(:thumb)) %>'); background-size: cover; background-position: center center;">
     <% else %>
-      <% Rails.logger.debug("Image not found : #{image_path}") %>
-      <div class="card-designer" style="background: url('<%= asset_path(designer.image) %>'); background-size: cover; background-position:center;">
+      <div class="card-designer" style="background: #F3F3F3;">
       <% end %>
       <div class="inner-card-designer">
         <% designer.countries.each do |country| %>
