--- a/app/views/designers/index.html.erb
+++ b/app/views/designers/index.html.erb
@@ -1,6 +1,5 @@
 <% content_for :title, "Découvrez des designers inspirants - Omniscient Design" %>
 <% content_for :description, "Plongez dans notre sélection de designers : biographies, projets, styles et parcours réunis dans un carnet numérique unique." %>
-
 <style>
   @media screen and (max-width: 320px) {
     .top-bar-search {
@@ -10,11 +9,11 @@
       height: calc(100dvh - 50px); /* Ajuster la hauteur pour les petits écrans */
     }
   }
- #cardContainer {
+   #cardContainer {
     position: relative;
     height: 100dvh;
     overflow-y: scroll;
-    scroll-snap-type: y mandatory; 
+    scroll-snap-type: y mandatory;
   }
   .box-card{
     display: flex;
@@ -26,34 +25,32 @@
     overflow: hidden; /* Désactive le scroll global */
   }
 </style>
-
 <section class="home-page top-bar-search">
   <%= link_to search_path, class: "search-link" do %>
-    <input id="workSearch" name="query" autocomplete="off" class="search-top-bar" type="search"                placeholder="<%= t('search.placeholder') %>">
-<% end %>
-<div class="top-bar-flex">
-  <div class="circle circle-notif" id="openPopup">
-    <svg width="4" height="22" viewBox="0 0 4 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M2 8L2 20" stroke="white" stroke-width="2.82843" stroke-linecap="round"/>
-      <path d="M2 2V2.0001" stroke="white" stroke-width="2.82843" stroke-linecap="round"/>
-    </svg>
-  </div>
-  <%= link_to notifications_path do %>
-    <div class="circle circle-notif">
-      <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M20.1825 5.26C19.3238 4.76133 18.7932 3.83333 18.7945 2.83333V2.82933C18.7958 1.26667 17.5438 0 15.9998 0C14.4558 0 13.2038 1.26667 13.2038 2.82933V2.83333C13.2052 3.83467 12.6758 4.76133 11.8158 5.26C5.59317 8.876 9.16917 20.88 2.6665 23.0013V25.3333H29.3332V23.0013C22.8305 20.88 26.4065 8.876 20.1825 5.26ZM15.9998 1.33333C16.7358 1.33333 17.3332 1.932 17.3332 2.66667C17.3332 3.40267 16.7358 4 15.9998 4C15.2638 4 14.6665 3.40267 14.6665 2.66667C14.6665 1.932 15.2638 1.33333 15.9998 1.33333ZM19.9998 28C19.9998 30.1307 18.1438 32 16.0385 32C13.9332 32 11.9998 30.1307 11.9998 28H19.9998Z" fill="white"/>
-      </svg>
-      <% if current_user %>
-        <% if @unread_notifications_count > 0 %>
-          <div class="notification-counter">
-            <div class="notification-badge"><%= @unread_notifications_count %></div>
-          </div>
-        <% end %>
-      <% end %>
-    </div>
+    <input id="workSearch" name="query" autocomplete="off" class="search-top-bar" type="search" placeholder="<%= t('search.placeholder') %>">
   <% end %>
-
-  <%# <button data-controller="lang-switcher" class="lang-switcher" data-action="click->lang-switcher#toggle">
+  <div class="top-bar-flex">
+    <div class="circle circle-notif" id="openPopup">
+      <svg width="4" height="22" viewBox="0 0 4 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M2 8L2 20" stroke="white" stroke-width="2.82843" stroke-linecap="round"/>
+        <path d="M2 2V2.0001" stroke="white" stroke-width="2.82843" stroke-linecap="round"/>
+      </svg>
+    </div>
+    <%= link_to notifications_path do %>
+      <div class="circle circle-notif">
+        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M20.1825 5.26C19.3238 4.76133 18.7932 3.83333 18.7945 2.83333V2.82933C18.7958 1.26667 17.5438 0 15.9998 0C14.4558 0 13.2038 1.26667 13.2038 2.82933V2.83333C13.2052 3.83467 12.6758 4.76133 11.8158 5.26C5.59317 8.876 9.16917 20.88 2.6665 23.0013V25.3333H29.3332V23.0013C22.8305 20.88 26.4065 8.876 20.1825 5.26ZM15.9998 1.33333C16.7358 1.33333 17.3332 1.932 17.3332 2.66667C17.3332 3.40267 16.7358 4 15.9998 4C15.2638 4 14.6665 3.40267 14.6665 2.66667C14.6665 1.932 15.2638 1.33333 15.9998 1.33333ZM19.9998 28C19.9998 30.1307 18.1438 32 16.0385 32C13.9332 32 11.9998 30.1307 11.9998 28H19.9998Z" fill="white"/>
+        </svg>
+        <% if current_user %>
+          <% if @unread_notifications_count > 0 %>
+            <div class="notification-counter">
+              <div class="notification-badge"><%= @unread_notifications_count %></div>
+            </div>
+          <% end %>
+        <% end %>
+      </div>
+    <% end %>
+    <%# <button data-controller="lang-switcher" class="lang-switcher" data-action="click->lang-switcher#toggle">
     <span class="lang-icon">
     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M8.82263 6.50977C8.82263 10.8194 6.63857 12.9761 3.94531 12.9761M3.94531 6.50977H10.7736" stroke="white" stroke-width="1.95093" stroke-linecap="round" stroke-linejoin="round"/>
@@ -76,9 +73,7 @@
           <% end 
       </div>
   </button> %>
-</div>
-
-
+  </div>
 </section>
 <div id="designers">
   <div class="home-flex" id="cardContainer">
@@ -88,20 +83,31 @@
         <%= link_to t('global.designers'), designers_path, class: "active"  %>
         <%= link_to t('global.references'), oeuvres_path%>
       </div>
-      <%= link_to search_path,  aria: { label: "Rechercher" } do %>
-        <svg width="11" height="11" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M10.8193 9.9518L8.74218 7.8808C9.41235 7.02701 9.77598 5.9727 9.77463 4.88732C9.77463 3.9207 9.48799 2.97578 8.95097 2.17207C8.41394 1.36836 7.65065 0.741936 6.75761 0.372027C5.86457 0.00211759 4.88189 -0.0946675 3.93385 0.0939106C2.9858 0.282489 2.11497 0.74796 1.43146 1.43146C0.74796 2.11497 0.282489 2.9858 0.0939106 3.93385C-0.0946675 4.88189 0.00211759 5.86457 0.372027 6.75761C0.741936 7.65065 1.36836 8.41394 2.17207 8.95097C2.97578 9.48799 3.9207 9.77463 4.88732 9.77463C5.9727 9.77598 7.02701 9.41235 7.8808 8.74218L9.9518 10.8193C10.0086 10.8766 10.0762 10.922 10.1506 10.953C10.225 10.984 10.3049 11 10.3855 11C10.4662 11 10.546 10.984 10.6205 10.953C10.6949 10.922 10.7625 10.8766 10.8193 10.8193C10.8766 10.7625 10.922 10.6949 10.953 10.6205C10.984 10.546 11 10.4662 11 10.3855C11 10.3049 10.984 10.225 10.953 10.1506C10.922 10.0762 10.8766 10.0086 10.8193 9.9518ZM1.22183 4.88732C1.22183 4.16235 1.43681 3.45367 1.83958 2.85088C2.24234 2.2481 2.81482 1.77828 3.4846 1.50085C4.15438 1.22342 4.89138 1.15083 5.60242 1.29226C6.31345 1.4337 6.96658 1.7828 7.47921 2.29543C7.99183 2.80805 8.34094 3.46118 8.48237 4.17222C8.6238 4.88325 8.55122 5.62026 8.27378 6.29004C7.99635 6.95982 7.52654 7.53229 6.92375 7.93506C6.32096 8.33782 5.61228 8.5528 4.88732 8.5528C3.91517 8.5528 2.98284 8.16662 2.29543 7.47921C1.60801 6.79179 1.22183 5.85946 1.22183 4.88732Z" fill="#202020"/>
+      <div class="circle circle-notif openPopup" id="openPopup">
+        <svg width="2" height="11" viewBox="0 0 4 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M2 8L2 20" stroke="white" stroke-width="2.82843" stroke-linecap="round"/>
+          <path d="M2 2V2.0001" stroke="white" stroke-width="2.82843" stroke-linecap="round"/>
         </svg>
-      <%end%>
+      </div>
     </div>
     <div class="switch-home">
       <%= link_to t('global.designers'), designers_path, class: "active" %>
       <%= link_to t('global.references'), oeuvres_path %>
     </div>
-    <div class="box-card" id="boxCard">
-      <%= render partial: 'designers/card', collection: @designers, as: :card, locals: { class_name: 'card' } %>
+    <div class="refonte-alert" id="refonteAlert">
+      <div class="refonte-alert-content">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 1l-12 22h24l-12-22zm-1 8h2v7h-2v-7zm1 11.25c-.69 0-1.25-.56-1.25-1.25s.56-1.25 1.25-1.25 1.25.56 1.25 1.25-.56 1.25-1.25 1.25z"/></svg>
+        <span><strong>Maintenance :</strong> Une opération de refonte des images est en cours sur les designers. Elles reviennent bientôt !</span>
+      </div>
+      <button class="refonte-alert-close" id="closeRefonteAlert" title="Fermer">×</button>
     </div>
-    <div id="designers-load-more" data-offset="2" data-loaded-ids="<%= @designers.pluck(:id).join(',') %>"></div>
+    <div class="box-card" id="boxCard">
+      <%= render partial: 'shared/cards_list', locals: { items: @items } %>
+    </div>
+    <div id="infinite-scroll-trigger" 
+         data-loaded-designer-ids="<%= @items.select { |i| i.is_a?(Designer) }.map(&:id).join(',') %>"
+         data-loaded-studio-ids="<%= @items.select { |i| i.is_a?(Studio) }.map(&:id).join(',') %>">
+    </div>
     <div class="button-nav">
       <button class="arrow-button up">
         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -245,52 +251,65 @@
       }, { passive: true });
     });
   </script>
-<div id="popup" class="popup">
-  <div class="popup-content">
-    <div class="top-popup">
-      <svg class="close-popup" id="closePopup" width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M19.9941 16.9964L33.3719 3.63981C33.7717 3.23995 33.9964 2.69763 33.9964 2.13215C33.9964 1.56667 33.7717 1.02435 33.3719 0.624492C32.972 0.224637 32.4297 0 31.8642 0C31.2987 0 30.7564 0.224637 30.3566 0.624492L17 14.0023L3.64343 0.624492C3.24358 0.224637 2.70125 5.02059e-07 2.13577 5.06273e-07C1.57029 5.10486e-07 1.02797 0.224637 0.628116 0.624492C0.228261 1.02435 0.00362441 1.56667 0.00362441 2.13215C0.0036244 2.69763 0.228261 3.23995 0.628116 3.63981L14.0059 16.9964L0.628116 30.3529C0.429087 30.5504 0.271115 30.7852 0.163309 31.044C0.055504 31.3027 0 31.5803 0 31.8606C0 32.1409 0.055504 32.4185 0.163309 32.6772C0.271115 32.936 0.429087 33.1709 0.628116 33.3683C0.825519 33.5673 1.06038 33.7253 1.31914 33.8331C1.5779 33.9409 1.85545 33.9964 2.13577 33.9964C2.4161 33.9964 2.69364 33.9409 2.95241 33.8331C3.21117 33.7253 3.44603 33.5673 3.64343 33.3683L17 19.9905L30.3566 33.3683C30.554 33.5673 30.7888 33.7253 31.0476 33.8331C31.3064 33.9409 31.5839 33.9964 31.8642 33.9964C32.1445 33.9964 32.4221 33.9409 32.6809 33.8331C32.9396 33.7253 33.1745 33.5673 33.3719 33.3683C33.5709 33.1709 33.7289 32.936 33.8367 32.6772C33.9445 32.4185 34 32.1409 34 31.8606C34 31.5803 33.9445 31.3027 33.8367 31.044C33.7289 30.7852 33.5709 30.5504 33.3719 30.3529L19.9941 16.9964Z" fill="#202020"/>
-      </svg>
-    </div>
-    <div class="popup-inner">
-      <p class="title-popup"><%= t('mainpopup.title') %></p>
-      <div class="popup-decoration">
-        <%= image_tag("logo-white.svg", :alt => "logo omniscient design") %>
-      </div>
-      <p class="subtitle-popup"><%= t('mainpopup.subtitle_project') %></p>
-      <p><%= t('mainpopup.description_project').gsub("\n", "<br>").html_safe %></p>
-      <%= link_to presentation_url, class: "button dark" do %>
-       <%= t('mainpopup.button_project') %>
-      <%end%>
-      <div class="popup-decoration">
-        <svg width="186" height="46" viewBox="0 0 186 46" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <g clip-path="url(#clip0_3317_340)">
-          <path d="M23 0L30.0303 15.6304L46 17.8365L34.3773 29.0068L37.214 46L23 37.2715L8.78408 46L11.6227 29.0068L0 17.8365L15.9697 15.6304L23 0Z" fill="white"/>
-          </g>
-          <g clip-path="url(#clip1_3317_340)">
-          <path d="M93 0L100.03 15.6304L116 17.8365L104.377 29.0068L107.214 46L93 37.2715L78.7841 46L81.6227 29.0068L70 17.8365L85.9697 15.6304L93 0Z" fill="white"/>
-          </g>
-          <g clip-path="url(#clip2_3317_340)">
-          <path d="M163 0L170.03 15.6304L186 17.8365L174.377 29.0068L177.214 46L163 37.2715L148.784 46L151.623 29.0068L140 17.8365L155.97 15.6304L163 0Z" fill="white"/>
-          </g>
-          <defs>
-          <clipPath id="clip0_3317_340">
-          <rect width="46" height="46" fill="white"/>
-          </clipPath>
-          <clipPath id="clip1_3317_340">
-          <rect width="46" height="46" fill="white" transform="translate(70)"/>
-          </clipPath>
-          <clipPath id="clip2_3317_340">
-          <rect width="46" height="46" fill="white" transform="translate(140)"/>
-          </clipPath>
-          </defs>
+  <div id="popup" class="popup">
+    <div class="popup-content">
+      <div class="top-popup">
+        <svg class="close-popup" id="closePopup" width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M19.9941 16.9964L33.3719 3.63981C33.7717 3.23995 33.9964 2.69763 33.9964 2.13215C33.9964 1.56667 33.7717 1.02435 33.3719 0.624492C32.972 0.224637 32.4297 0 31.8642 0C31.2987 0 30.7564 0.224637 30.3566 0.624492L17 14.0023L3.64343 0.624492C3.24358 0.224637 2.70125 5.02059e-07 2.13577 5.06273e-07C1.57029 5.10486e-07 1.02797 0.224637 0.628116 0.624492C0.228261 1.02435 0.00362441 1.56667 0.00362441 2.13215C0.0036244 2.69763 0.228261 3.23995 0.628116 3.63981L14.0059 16.9964L0.628116 30.3529C0.429087 30.5504 0.271115 30.7852 0.163309 31.044C0.055504 31.3027 0 31.5803 0 31.8606C0 32.1409 0.055504 32.4185 0.163309 32.6772C0.271115 32.936 0.429087 33.1709 0.628116 33.3683C0.825519 33.5673 1.06038 33.7253 1.31914 33.8331C1.5779 33.9409 1.85545 33.9964 2.13577 33.9964C2.4161 33.9964 2.69364 33.9409 2.95241 33.8331C3.21117 33.7253 3.44603 33.5673 3.64343 33.3683L17 19.9905L30.3566 33.3683C30.554 33.5673 30.7888 33.7253 31.0476 33.8331C31.3064 33.9409 31.5839 33.9964 31.8642 33.9964C32.1445 33.9964 32.4221 33.9409 32.6809 33.8331C32.9396 33.7253 33.1745 33.5673 33.3719 33.3683C33.5709 33.1709 33.7289 32.936 33.8367 32.6772C33.9445 32.4185 34 32.1409 34 31.8606C34 31.5803 33.9445 31.3027 33.8367 31.044C33.7289 30.7852 33.5709 30.5504 33.3719 30.3529L19.9941 16.9964Z" fill="#202020"/>
         </svg>
       </div>
-      <p class="subtitle-popup"><%= t('mainpopup.subtitle_feedback') %></p>
-     <p><%= t('mainpopup.description_feedback') %></p>
-        <%= link_to new_feedback_url, class: "button dark" do %>
-         <%= t('mainpopup.button_feedback') %>
+      <div class="popup-inner">
+        <p class="title-popup"><%= t('mainpopup.title') %></p>
+        <div class="popup-decoration">
+          <%= image_tag("logo-white.svg", :alt => "logo omniscient design") %>
+        </div>
+        <p class="subtitle-popup"><%= t('mainpopup.subtitle_project') %></p>
+        <p><%= t('mainpopup.description_project').gsub("\n", "<br>").html_safe %></p>
+        <%= link_to presentation_url, class: "button dark" do %>
+          <%= t('mainpopup.button_project') %>
         <%end%>
+        <div class="popup-decoration">
+          <svg width="186" height="46" viewBox="0 0 186 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_3317_340)">
+              <path d="M23 0L30.0303 15.6304L46 17.8365L34.3773 29.0068L37.214 46L23 37.2715L8.78408 46L11.6227 29.0068L0 17.8365L15.9697 15.6304L23 0Z" fill="white"/>
+            </g>
+            <g clip-path="url(#clip1_3317_340)">
+              <path d="M93 0L100.03 15.6304L116 17.8365L104.377 29.0068L107.214 46L93 37.2715L78.7841 46L81.6227 29.0068L70 17.8365L85.9697 15.6304L93 0Z" fill="white"/>
+            </g>
+            <g clip-path="url(#clip2_3317_340)">
+              <path d="M163 0L170.03 15.6304L186 17.8365L174.377 29.0068L177.214 46L163 37.2715L148.784 46L151.623 29.0068L140 17.8365L155.97 15.6304L163 0Z" fill="white"/>
+            </g>
+            <defs>
+              <clipPath id="clip0_3317_340">
+                <rect width="46" height="46" fill="white"/>
+              </clipPath>
+              <clipPath id="clip1_3317_340">
+                <rect width="46" height="46" fill="white" transform="translate(70)"/>
+              </clipPath>
+              <clipPath id="clip2_3317_340">
+                <rect width="46" height="46" fill="white" transform="translate(140)"/>
+              </clipPath>
+            </defs>
+          </svg>
+        </div>
+        <p class="subtitle-popup"><%= t('mainpopup.subtitle_feedback') %></p>
+        <p><%= t('mainpopup.description_feedback') %></p>
+        <%= link_to new_feedback_url, class: "button dark" do %>
+          <%= t('mainpopup.button_feedback') %>
+        <%end%>
+      </div>
     </div>
   </div>
-</div>
+  <script>
+    document.addEventListener("turbo:load", function() {
+      const alertElement = document.getElementById("refonteAlert");
+      const closeButton = document.getElementById("closeRefonteAlert");
+
+      // S'ils n'existent pas sur la page, on ne fait rien
+      if (!alertElement || !closeButton) return;
+
+      closeButton.addEventListener("click", function() {
+        alertElement.style.display = "none";
+      });
+    });
+  </script>
