--- a/app/views/lists/_designers_list.html.erb
+++ b/app/views/lists/_designers_list.html.erb
@@ -4,12 +4,10 @@
       (defined?(@selected_designer_ids) && @selected_designer_ids.include?(designer.id)),
       class: 'hidden-check', id: "designer_#{designer.id}", disabled: true %>
   <label for="designer_#{designer.id}">
-    <% thumb_path = "designers/thumbs/#{remove_accents_and_special_chars(designer.nom_designer)}.webp" %>
-    <% if asset_exists?(thumb_path) %>
-      <div class="card-list-add" style="background-image: url('<%= asset_path(thumb_path) %>');  background-size: cover; background-position: center;">
+    <% if designer.designer_images.first&.file&.attached? %>
+      <div class="card-list-add" style="background-image: url('<%= url_for(designer.designer_images.first.file.variant(:thumb)) %>');  background-size: cover; background-position: center;">
       <% else %>
-        <% Rails.logger.debug("Image not found : #{thumb_path}") %>
-        <div class="card-list-add" style="background: url('<%= asset_path(designer.image) %>'); background-size: cover; background-position: center;">
+        <div class="card-list-add" style="background: #F3F3F3;">
         <% end %>
         <div class="default-overlay"></div>
         <p class="card-title-add"><%= truncate(designer.nom_designer, length: 25, omission: '...') %></p>
