--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -82,6 +82,12 @@
             data-action="click->tabs-search#switch">
       <%= t('global.designers') %> (<%= Designer.where(validation: true).count %>)
     </button>
+    <button class="tab <%= 'active' if params[:tab] == 'studios' %>" 
+          data-tab="studios" 
+          data-tabs-search-target="tab" 
+          data-action="click->tabs-search#switch">
+      <%= t('global.studios', default: 'Studios') %> (<%= @studios.total_count %>)
+    </button>
     <button class="tab <%= 'active' if params[:tab] == 'frise' %>" 
             data-tab="frise" 
             data-tabs-search-target="tab" 
@@ -169,6 +175,16 @@
                       <%= paginate @oeuvres, params: { tab: 'references' } %>
                     <% end %>
                   </div>
+                  <div id="studios" class="content-tab" data-tabs-search-target="tabContent" style="<%= params[:tab] == 'studios' ? 'display:block;' : 'display:none;' %>">
+                    <div id="studios-container" class="flex-container">
+                      <% @studios.each do |studio| %>
+                        <%= render 'studios/studio_card', studio: studio %>
+                      <% end %>
+                    </div>
+                    <% unless params[:tab] == "frise" %>
+                      <%= paginate @studios, params: { tab: 'studios' } %>
+                    <% end %>
+                  </div>
                   <div id="designers" class="content-tab" data-tabs-search-target="tabContent" style="<%= params[:tab] == 'designers' ? 'display:block;' : 'display:none;' %>">
                     <div id="designers-container" class="flex-container">
                       <% @designers.each do |designer| %>
@@ -235,16 +251,26 @@
                                   <span class="circle-with-number" data-action="click->oeuvres-counter#toggle">+<%= designers_year.size %></span>
                                   <div class="hidden-oeuvres" data-oeuvres-counter-target="hiddenOeuvres" style="display: none;">
                                     <% designers_year.each do |designer| %>
-                                      <%= link_to designer, data: { turbo_frame: "_top" }, class: "oeuvre-point" do %>
-                                        <div class="oeuvre" title="<%= designer.nom_designer %>" data-year="<%= designer.date_naissance %>" style="background-image: url('<%= designer.image %>');"></div>
+                                      <%= link_to designer, class: "oeuvre-point" do %>
+                                        <% if designer.designer_images.first&.file&.attached? %>
+                                          <div class="oeuvre" title="<%= designer.nom_designer %>" data-year="<%= designer.date_naissance %>" style="background-image: url('<%= url_for(designer.designer_images.first.file.variant(:thumb))  %>');"></div>
+                                        <% else %>
+                                          <%# Fallback : une div vide avec une couleur ou sans image %>
+                                          <div class="oeuvre" title="<%= designer.nom_designer %>" data-year="<%= designer.date_naissance %>" style="background-color: #D9D9D9;"></div>
+                                        <% end %>
                                       <% end %>
                                     <% end %>
                                   </div>
                                 </div>
                               <% else %>
                                 <% designers_year.each do |designer| %>
-                                  <%= link_to designer, data: { turbo_frame: "_top" }, class: "oeuvre-point" do %>
-                                    <div class="oeuvre" title="<%= designer.nom_designer %>" data-year="<%= designer.date_naissance %>" style="background-image: url('<%= designer.image %>');"></div>
+                                  <%= link_to designer, class: "oeuvre-point" do %>
+                                    <% if designer.designer_images.first&.file&.attached? %>
+                                      <div class="oeuvre" title="<%= designer.nom_designer %>" data-year="<%= designer.date_naissance %>" style="background-image: url('<%= url_for(designer.designer_images.first.file.variant(:thumb))  %>');"></div>
+                                    <% else %>
+                                      <%# Fallback : une div vide avec une couleur ou sans image %>
+                                      <div class="oeuvre" title="<%= designer.nom_designer %>" data-year="<%= designer.date_naissance %>" style="background-color: #D9D9D9;"></div>
+                                    <% end %>
                                   <% end %>
                                 <% end %>
                               <% end %>
