--- a/app/views/oeuvres/_ad_card.html.erb
+++ b/app/views/oeuvres/_ad_card.html.erb
@@ -19,6 +19,13 @@
           </picture>
         </div>
         <div class="flex-info-card ads">
+          <div class="info-card-dark">
+            <div class="small-circle" style="background-color: #FFF;"></div>
+            Sponsorisé
+          </div>
+          <div class="info-card" style="background-color: #FFF; color: #202020;">
+            En savoir plus →
+          </div>
         </div>
       </div>
     </div>
@@ -30,4 +37,4 @@
       <p class="description-card description-card-home"><%= ad[:description] %></p>
     </div>
   </div>
-<% end %>
+ <% end %>
